--- a/project/stylus/_font-face.styl
+++ b/project/stylus/_font-face.styl
@@ -12,5 +12,9 @@ m-font-face( $font-family = "Arial", $file-path = "", $weight = normal, $style =
 			src: url($file-path+'.eot')
 			src: url($file-path+'.eot?#iefix') format('embedded-opentype'), url($file-path+'.woff') format('woff'), url($file-path+'.ttf') format('truetype')
 	
-m-font-face("RobotoBold", "../fonts/RobotoBold/RobotoBold")
-m-font-face("RobotoRegular", "../fonts/RobotoRegular/RobotoRegular")
+m-font-face("AvenirNextBold", "../fonts/AvenirNextBold/AvenirNextBold")
+m-font-face("AvenirNextMedium", "../fonts/AvenirNextMedium/AvenirNextMedium")
+m-font-face("AvenirNextRegular", "../fonts/AvenirNextRegular/AvenirNextRegular")
+m-font-face("OpenSansRegular", "../fonts/OpenSansRegular/OpenSansRegular")
+m-font-face("OpenSansBold", "../fonts/OpenSansBold/OpenSansBold")
+m-font-face("OpenSansSemiBold", "../fonts/OpenSansSemiBold/OpenSansSemiBold")
