--- a/project/stylus/_vars.styl
+++ b/project/stylus/_vars.styl
@@ -1,3 +1,10 @@
-$default-font = "RobotoBold", sans-serif
-$accent = #333
-
+$default-font = "AvenirNextRegular", sans-serif
+$openSansBold = "OpenSansBold", sans-serif
+$OpenSansSemiBold = "OpenSansSemiBold", sans-serif
+$AvenirNextMedium = "AvenirNextMedium", sans-serif
+$AvenirNextBold = "AvenirNextBold", sans-serif
+$AvenirNextRegular = "AvenirNextRegular", sans-serif
+$white = #fff
+$green = #05c9d8
+$gray = #8599b0
+$black = #000
