--- a/project/stylus/_media.styl
+++ b/project/stylus/_media.styl
@@ -3,21 +3,158 @@
 /*==========  Desktop First  ==========*/
 
 /* Large Devices, Wide Screens */
-@media (max-width : 1200px)
-	/**/
+@media (max-width : 1020px)
+	.footer
+		&-item 
+			padding-right 150px
+			&:nth-child(2)
+				padding-right 150px
 
 /* Medium Devices, Desktops */
 @media (max-width : 992px)
-	/**/
+	.partner
+		&-item 
+			width 50%
+		&-note 
+			font-size 14px
+			max-width 400px
 
 /* Small Devices, Tablets */
+@media (max-width : 820px)
+	.header
+		&-title,
+		&-subtitle
+			font-size 32px
+			line-height 38px
+	.title
+		font-size 32px
+		line-height 38px
+	.footer
+		&-item 
+			padding-right 0
+			&:nth-child(2)
+				padding-right 0
+		&-items 
+			justify-content space-between
+
 @media (max-width : 768px)
-	/**/
+	.clients
+		padding 60px 0 15px
+		&-title 
+			text-align center
+		&-items 
+			flex-direction column 
+			align-items center
+			padding-bottom 0
+		&-subtitle 
+			text-align center
+		&-item 
+			margin-right 0
+			width 100%
+		&-pluses
+			margin 15px 0 0
+		&-plus 
+			width 340px
+			margin 0 auto 9px
+		&-subtitle
+			font-size 32px
+		&-number 
+			top -6px
+	.partner
+		padding 30px 0
+		&-top 
+			flex-direction column
+		&-note 
+			margin 20px 0
+			max-width 100%
+		&-items 
+			margin 30px 0 0
+		&-item
+			width 100%
+			flex-direction column
+			align-items center
+		&-text 
+			padding 10px 0
+			text-align center
+		&-image 
+			img 
+				margin 0 auto
+		
+	.title 
+		text-align center
+	.footer
+		padding 30px 0
+		&-text,
+		&-bottom 
+			margin-top 30px
+		&-social 
+			a
+				margin-left 15px
+		&-li 
+			a 
+				font-size 16px
+				line-height 32px
+
 
 /* Extra Small Devices, Phones */
-@media (max-width : 480px)
-	/**/
+@media (max-width : 540px)
+	.header
+		&-navigation
+			flex-direction column
+		&-item 
+			margin 0
+			&-buttons 
+				margin-top 20px
+				justify-content flex-end
+		&-title,
+		&-subtitle
+			font-size 26px
+			line-height 32px
 
+	.title
+		font-size 26px
+		line-height 32px
+	
+	.clients
+		&-subtitle 
+			font-size 26px
+	
+
+@media (max-width : 640px)
+	.footer
+		&-items 
+			flex-direction column
+			text-align center
+		&-item 
+			margin-bottom 60px
+		&-list 
+			margin-top 6px
 /* Custom, iPhone Retina */
-@media (max-width : 320px)
-	/**/
+@media (max-width : 480px)
+	.header
+		&-title,
+		&-subtitle
+			font-size 20px
+			line-height 32px
+	.clients
+		&-number 
+			font-size 52px
+			top -20px
+		&-body 
+			margin-left 18px
+	
+	.title
+		font-size 20px
+		line-height 32px
+
+	.footer
+		&-bottom 
+			flex-direction column
+			text-align center
+		&-copyright 
+			order 1
+		
+@media (max-width : 380px)
+	.clients
+		&-plus 
+			width 100%
