--- a/project/stylus/main.styl
+++ b/project/stylus/main.styl
@@ -52,4 +52,364 @@ p
 a
 	transition .2s color ease-in
 
+body 
+	background-color #0f1823
+
+.wrapper
+	max-width 1190px
+	width 100%
+	padding 0 15px
+	margin 0 auto
+
+.title
+	color $white
+	font-family $AvenirNextMedium
+	font-size 40px
+	line-height 50px
+	text-transform uppercase
+	span 
+		color $green
+		font-family $AvenirNextBold
+
+
+.header
+	padding-bottom 120px
+	// background-image url(../img/bg_01.png)
+	// background-size 89%
+	// background-repeat no-repeat
+	// background-position: 50% 50%
+	&-wrapper
+		width 100%
+		max-width 1392px
+		padding 0 15px
+		margin 0 auto 
+	&-navigation 
+		display flex
+		justify-content space-between
+		padding 40px 0
+	&-item 
+		display flex
+		justify-content space-between
+		margin-left 21px
+		align-items baseline
+		&-buttons 
+			margin-top 6px
+	&-link 
+		text-decoration none
+		text-transform uppercase
+		color $white
+		font-family $openSansBold
+		font-size 12px
+		line-height 20px
+		text-transform uppercase
+		display inline-block
+		position relative
+		top -4px
+		&:hover 
+			color $green
+	&-separator
+		height 20px
+		width 1px
+		background-color $white
+		display inline-block
+		margin 0 26px 0 38px
+	&-login 
+		text-decoration none
+		color $white
+		font-family $openSansBold
+		font-size 12px
+		line-height 20px
+		text-transform uppercase
+		border-radius 2px
+		border 1px solid $green
+		display inline-block
+		padding 4px 20px
+		transition background .3s ease
+		&:hover 
+			color $white
+			background $green
+	&-sign 
+		text-decoration none
+		color $white
+		font-family $openSansBold
+		font-size 12px
+		line-height 20px
+		text-transform uppercase
+		&-wrapper 
+			margin 2px 30px 0 0
+		&:hover 
+			color $green
+	&-body 
+		text-align center
+		margin 24px 0
+	&-title 
+		font-size 40px
+		line-height 50px
+		text-transform uppercase
+		font-family $AvenirNextMedium
+		color $white
+	&-subtitle 
+		color $white
+		font-family $AvenirNextBold
+		font-size 40px
+		line-height 50px
+		text-transform uppercase
+		margin-top 2px
+	&-images 
+		display flex
+		justify-content space-between
+	&-image
+		&-first 
+			position relative
+			left 3.7%
+			top 105px
+			z-index 2
+			width 62%
+		&-second 
+			position relative
+			left -25.9%
+			top 55px
+			width 62%
+
+.clients
+	padding 112px 0 40px
+	&-title 
+		color $white
+		font-family $AvenirNextMedium
+		font-size 40px
+		line-height 50px
+		text-transform uppercase
+	&-items 
+		display flex
+		padding 40px 0
+	&-item 
+		width 50%
+		margin-right 15px
+	&-subtitle 
+		color $green
+		font-family $AvenirNextBold
+		font-size 40px
+		line-height 50px
+		text-transform uppercase
+	&-pluses
+		margin 58px 0
+	&-plus
+		display flex
+		margin-bottom 9px
+		&-top 
+			color $white
+			font-family $AvenirNextBold
+			font-size 24px
+			line-height 30px
+		&-bottom 
+			color #8599b0
+			font-family $AvenirNextMedium
+			font-size 12px
+			letter-spacing 2px
+			line-height 20px
+			text-transform uppercase
+			margin-top 10px
+	&-body 
+		margin-left 35px
+	&-number 
+		opacity 0.08
+		color $green
+		font-family $AvenirNextBold
+		font-size 100px
+		line-height 100px
+		position relative
+		top -20px
+		
+.partner
+	padding 38px 0 32px
+	&-note 
+		opacity 0.6
+		color $white
+		font-family $AvenirNextRegular
+		font-size 16px
+		font-weight 400
+		line-height 26px
+		max-width: 460px
+		margin-left 20px
+	&-top 
+		display flex
+		justify-content space-between
+	&-text 
+		color $white
+		font-family $AvenirNextRegular
+		font-size 18px
+		line-height 30px
+		padding-left 41px
+		padding-top 6px
+	&-items 
+		display flex
+		justify-content space-between
+		flex-wrap wrap
+		margin 98px 0
+	&-item 
+		width 33%
+		display flex
+		margin-bottom 52px
+	&-image 
+		min-width 75px
+
+.brands
+	&-wrapper
+		display flex
+	&-item 
+		background rgba(5, 201, 216, .1)
+		border-radius 20px
+		height 440px
+		max-width 400px
+		display flex
+		flex-direction column
+		justify-content flex-end
+		img 
+			position absolute
+			top 0
+			left 0
+			max-width 95%
+	&-subtitle 
+		color $white
+		font-family $AvenirNextBold
+		font-size 24px
+		line-height 30px
+		text-transform uppercase
+	&-text 
+		color #cad9ea
+		font-family $AvenirNextMedium
+		font-size 14px
+		line-height 25px
+	&-body 
+		padding 25px
+	&-margin
+		margin-right 400px
+		margin-right 20%
+
+
+.signup
+	text-align center
+	padding 118px 0
+	&-title 
+		line-height 58px
+	&-button
+		background-color #05c9d8
+		color $white
+		font-family $AvenirNextBold
+		font-size 18px
+		line-height 30px
+		text-transform uppercase
+		text-decoration none
+		padding 30px 66px
+		border-radius 10px
+		display inline-block
+		transform skewX(6deg)
+		position relative
+		&:after
+			position absolute
+			content ''
+			top -94px
+			left 30px
+			width 215px
+			height 132px
+			background-image url(../img/money@2x.png)
+		&-wrapper
+			margin-top 86px
+
+.footer
+	padding 60px 0
+	&-items
+		display flex
+		justify-content flex-start
+	&-item 
+		padding-right 230px
+		&:nth-child(2)
+			padding-right 266px
+		&:last-child
+			padding-right 0
+	&-title 
+		color $white
+		font-family $AvenirNextMedium
+		font-size 20px
+		line-height 50px
+		text-transform uppercase
+	&-list 
+		margin-top 16px
+	&-li 
+		a 
+			color $white
+			font-family $AvenirNextRegular
+			font-size 18px
+			line-height 40px
+			text-decoration none
+			&:hover 
+				color $green
+	&-text 
+		color #8599b0
+		font-family $AvenirNextRegular
+		font-size 14px
+		line-height 30px
+		margin-top 65px
+	&-bottom 
+		display flex
+		justify-content space-between
+		margin-top 70px
+	&-copyright 
+		opacity 0.8
+		color #8599b0
+		font-family $AvenirNextMedium
+		font-size 10px
+		line-height 14px
+		text-transform uppercase
+		margin-top 18px
+	&-social 
+		margin-top 11px
+		svg 
+			margin-right 5px
+			position relative
+			top 4px
+		a 
+			color $white
+			font-family $OpenSansSemiBold
+			font-size 8px
+			letter-spacing 1.81px
+			line-height 25px
+			text-transform uppercase
+			text-decoration none
+			margin-left 70px
+			transition all .3s ease
+			&:hover 
+				color $green 
+				g 
+					fill $green 
+
+
+
+g 
+	transition all .3s ease
+
+// OWL
+.owl-carousel
+	padding-top 132px
+.owl-dots
+	position absolute
+	top -32px
+	right 0
+.owl-theme
+	.owl-dots
+		.owl-dot span
+			background-color #fff
+			width 20px
+			height 20px
+			border 4px solid
+		.owl-dot.active
+			outline none
+			span
+				border 4px solid 
+				background-color transparent
+
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span
+	border 4px solid #05c9d8
+	background-color transparent
+
 @import "_media.styl" // Always at the end
