--- a/project/stylus/_media.styl
+++ b/project/stylus/_media.styl
@@ -36,6 +36,9 @@
 				padding-right 0
 		&-items 
 			justify-content space-between
+	.owl-dots
+		top 30px
+		left 10px
 
 @media (max-width : 768px)
 	.clients
@@ -67,6 +70,7 @@
 		&-note 
 			margin 20px 0
 			max-width 100%
+			text-align center
 		&-items 
 			margin 30px 0 0
 		&-item
@@ -79,6 +83,9 @@
 		&-image 
 			img 
 				margin 0 auto
+	.owl-dots 
+		left 50%
+		margin-left -102px
 		
 	.title 
 		text-align center
@@ -94,6 +101,8 @@
 			a 
 				font-size 16px
 				line-height 32px
+	.signup
+		padding 60px 0
 
 
 /* Extra Small Devices, Phones */
@@ -110,6 +119,10 @@
 		&-subtitle
 			font-size 26px
 			line-height 32px
+		&-separator 
+			margin -4px 7px 0 12px
+		&-link 
+			top -5px
 
 	.title
 		font-size 26px
@@ -118,6 +131,13 @@
 	.clients
 		&-subtitle 
 			font-size 26px
+	.brands
+		&-item 
+			max-width 286px
+			height 366px
+		&-body 
+			padding 15px 15px 45px
+	
 	
 
 @media (max-width : 640px)
