--- a/project/stylus/main.styl
+++ b/project/stylus/main.styl
@@ -54,6 +54,9 @@ a
 
 body 
 	background-color #0f1823
+	position relative
+	background-image url(../img/back.jpg)
+	background-size cover
 
 .wrapper
 	max-width 1190px
@@ -71,13 +74,39 @@ body
 		color $green
 		font-family $AvenirNextBold
 
+.background-image
+	position absolute
+	top 0
+	left 0
+	z-index -1
+
+.bg-1
+	width 70%
+	left 20%
+	top 100px
+.bg-2 
+	width 65%
+	left 68%
+	top 78%
+.bg-3 
+	left -27%
+	width 60%
+	top 110%
+.bg-4 
+	left 75%
+	top 150%
+	width 60%
+.bg-5 
+	width 60%
+	top 300%
+	left -24%
+.bg-6 
+	width 45%
+	top 335%
+	left 78%
 
 .header
 	padding-bottom 120px
-	// background-image url(../img/bg_01.png)
-	// background-size 89%
-	// background-repeat no-repeat
-	// background-position: 50% 50%
 	&-wrapper
 		width 100%
 		max-width 1392px
@@ -254,6 +283,8 @@ body
 		min-width 75px
 
 .brands
+	position relative
+	z-index 1
 	&-wrapper
 		display flex
 	&-item 
@@ -267,7 +298,7 @@ body
 		img 
 			position absolute
 			top 0
-			left 0
+			left 10px
 			max-width 95%
 	&-subtitle 
 		color $white
@@ -275,13 +306,14 @@ body
 		font-size 24px
 		line-height 30px
 		text-transform uppercase
+		margin-bottom 18px
 	&-text 
 		color #cad9ea
 		font-family $AvenirNextMedium
 		font-size 14px
 		line-height 25px
 	&-body 
-		padding 25px
+		padding 25px 60px 65px
 	&-margin
 		margin-right 400px
 		margin-right 20%
@@ -293,7 +325,7 @@ body
 	&-title 
 		line-height 58px
 	&-button
-		background-color #05c9d8
+		background #05c9d8
 		color $white
 		font-family $AvenirNextBold
 		font-size 18px
@@ -303,18 +335,24 @@ body
 		padding 30px 66px
 		border-radius 10px
 		display inline-block
-		transform skewX(6deg)
+		transform perspective(1600px) rotateX(20deg)
 		position relative
-		&:after
-			position absolute
-			content ''
-			top -94px
-			left 30px
-			width 215px
-			height 132px
-			background-image url(../img/money@2x.png)
+		transition background .3s ease
+		&:hover 
+			background $white
+			color $black
 		&-wrapper
+			position relative
 			margin-top 86px
+			&:after
+				position absolute
+				content ''
+				top -92px
+				left 50%
+				margin-left -107px
+				width 215px
+				height 132px
+				background-image url(../img/money@2x.png)
 
 .footer
 	padding 60px 0
@@ -393,10 +431,12 @@ g
 	padding-top 132px
 .owl-dots
 	position absolute
-	top -32px
-	right 0
+	top -40px
+	left 74%
 .owl-theme
 	.owl-dots
+		.owl-dot:focus
+			outline none
 		.owl-dot span
 			background-color #fff
 			width 20px
