add spin value js

--- a/project/stylus/_media.styl
+++ b/project/stylus/_media.styl
@@ -108,6 +108,7 @@
 /* Extra Small Devices, Phones */
 @media (max-width : 540px)
 	.header
+		padding-bottom 60px
 		&-navigation
 			flex-direction column
 		&-item 
