--- a/project/stylus/main.styl
+++ b/project/stylus/main.styl
@@ -188,6 +188,8 @@ body
 		display flex
 		justify-content space-between
 	&-image
+		height auto
+		align-self center
 		&-first 
 			position relative
 			left 3.7%
