--- a/project/css/main.css
+++ b/project/css/main.css
@@ -278,6 +278,11 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+.header-image {
+  height: auto;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
 .header-image-first {
   position: relative;
   left: 3.7%;
@@ -762,6 +767,9 @@ g {
   }
 }
 @media (max-width: 540px) {
+  .header {
+    padding-bottom: 60px;
+  }
   .header-navigation {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
